# Noofy

./: .gitignore  AGENTS.md  ARCHITECTURE_FIX_PLAN.md  CLAUDE.md  DESIGN_SYSTEM.md  Makefile  README.md  inpainting_flux-klein-4b-turbo.noofy  noofy_custom_node_source_boundary_implementation_plan.md  noofy_stale_window_session_restore_plan.md  txt2video_ltx2_3.noofy
backend/: README.md  pyproject.toml
backend/app/: AGENTS.md  __init__.py  __main__.py  archive_safety.py  artifacts.py  composition.py  gallery.py  history.py  main.py  media_types.py  model_download_jobs.py  model_imports.py  model_inventory.py  model_ownership.py  model_paths.py  model_tags.py  source_policy.py  trust.py
backend/app/api/: __init__.py  deps.py  errors.py  router.py  routes.py  schemas.py
backend/app/core/: auth.py  config.py  logging.py  paths.py  session.py
backend/app/diagnostics/: AGENTS.md  __init__.py  redaction.py  store.py
backend/app/engine/: AGENTS.md  __init__.py  adapter.py  comfyui_adapter.py  diagnostics.py  errors.py  factory.py  job_store.py  memory_observation.py  models.py  process_manager.py  service.py
backend/app/models/: AGENTS.md  civitai_loras.py  download_progress.py  downloads.py  folders.py  imports.py  inventory.py  schemas.py  source_auth.py  tags.py
backend/app/runs/: AGENTS.md  credentials.py  job_service.py  lifecycle_service.py  media_staging.py  orchestrator.py  progress_estimator.py  queue_service.py  result_service.py
backend/app/runtime/: AGENTS.md  __init__.py  capsule_installer.py  comfyui_sidecar_service.py  comfyui_update_archive.py  comfyui_update_records.py  comfyui_update_releases.py  comfyui_update_smoke.py  comfyui_updates.py  core_node_manifest.json  custom_nodes.py  dependency_env.py  dependency_lock.py  dependency_lock_store.py  dependency_resolver.py  environment.py  fingerprints.py  hardware.py  install_state.py  install_transactions.py  isolation.py  launch_settings.py  manager.py  memory_governor.py  memory_governor_hardware_validation.py  model_gc.py  model_store.py  node_registry.py  node_registry_catalog.json  node_type_mappings.json  phase5e_real_smoke.py  profile_catalog.json  profiles.py  python_abi.py  resource_monitor.py  runner_coordinator.py  runner_memory_probe.py  runner_process.py  runtime_tool_versions.json  runtime_tool_versions.py  (+6 more)
backend/app/settings/: __init__.py  api_keys.py  local_engine.py  model_folders.py  onboarding.py
backend/app/workflows/: AGENTS.md  __init__.py  archive_validation.py  assets.py  authoring.py  bindings.py  capsule.py  core_input_metadata.py  exporter.py  fp8_compatibility.py  fp8_conversion.py  fp8_convert_script.py  graph_model_selectors.py  import_capsule_lock.py  import_normalization.py  import_orchestrator.py  import_policy.py  import_runtime_profile.py  importer.py  library.py  library_service.py  loader.py  media_values.py  metadata_inference.py  model_architecture.py  model_availability.py  model_grouping.py  model_identity_store.py  model_overrides.py  package.py  package_assets.py  package_persistence.py  removal_cleanup.py  run_input_validation.py  store_paths.py  user_state.py  validator.py  verification_dispatch.py  (+1 more)
backend/tests/: conftest.py  fp8_test_utils.py  test_api_auth.py  test_api_keys.py  test_api_paths.py  test_api_runtime.py  test_api_workflow_import.py  test_api_workflow_install.py  test_architecture_refactor_compat.py  test_archive_safety.py  test_backend_launcher.py  test_capsule_installer.py  test_capsule_loader.py  test_civitai_loras.py  test_closed_view_release.py  test_comfyui_adapter.py  test_comfyui_launch_settings.py  test_comfyui_update_archive.py  test_comfyui_update_records.py  test_comfyui_update_releases.py  test_comfyui_update_smoke.py  test_comfyui_updates.py  test_crash_watchdog.py  test_custom_node_workspace.py  test_dashboard_assets.py  test_dashboard_authoring.py  test_dashboard_persistence.py  test_dashboard_routing.py  test_dependency_env.py  test_dependency_lock.py  test_dependency_lock_store.py  test_dependency_resolver.py  test_diagnostics.py  test_download_progress.py  test_engine_service_install.py  test_exporter.py  test_fp8_alternative_download.py  test_fp8_conversion_job.py  test_fp8_convert_plan.py  test_fp8_detection.py  (+62 more)
frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.linux.conf.json
(+314 files in other folders)
