[project]
name = "local-ai-workflow-backend"
version = "0.1.0"
description = "Backend engine contract for the local AI workflow desktop app."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42",
  "fastapi>=0.115",
  "httpx>=0.27",
  "keyring>=25",
  "Pillow>=10",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "SecretStorage>=3.3; sys_platform == 'linux'",
  "uvicorn[standard]>=0.30",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "uv==0.11.10",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.runtime" = ["profile_catalog.json", "core_node_manifest.json", "runtime_tool_versions.json"]
"app.runtime.profiles" = ["profile_catalog.json"]
"app.runtime.dependencies" = ["core_node_manifest.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
